<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputScreen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:gravity="end|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/seven"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"
            />
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/eight"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/four"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/five"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/six"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/three"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/two"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/One"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/zero"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnFloat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:text="@string/clear"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:onClick="onEqual"
            android:text="@string/equals"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml"/>
        <!--            style="?android:attr/buttonBarButtonStyle" -->

    </LinearLayout>
</LinearLayout>